[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Explosion/0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Explosion/2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Explosion/1.png" type="Texture" id=3]
[ext_resource path="res://Effects_script/Explosion.gd" type="Script" id=4]
[ext_resource path="res://Sounds/MetalClang_sfx.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/BombExplodeSfx.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Explode",
"speed": 2.0
} ]

[node name="Explosion" type="AnimatedSprite"]
pause_mode = 2
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "Explode"
frame = 1
playing = true
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 2
margin_left = -832.0
margin_top = -496.0
margin_right = 520.0
margin_bottom = 296.0
color = Color( 0, 0, 0, 0.231373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombExplodeSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 5.0

[node name="MetalClangSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.8
[connection signal="animation_finished" from="." to="." method="_on_Explosion_animation_finished"]
[connection signal="finished" from="BombExplodeSfx" to="." method="_on_BombExplodeSfx_finished"]
[connection signal="finished" from="MetalClangSfx" to="." method="_on_MetalClangSfx_finished"]
